# Minder

.github/workflows/: ci.yml  test.yml
ClientConnection/: CMakeLists.txt  README.MD  README.md  main.cpp
ClientConnection/HttpClient/: CMakeLists.txt  ClientData.h  HttpClient.cpp  HttpClient.hpp  HttpClientData.hpp
ClientConnection/JsonParser/: CMakeLists.txt  JsonParser.cpp  JsonParser.hpp
ClientConnection/nlohmann/: json.hpp
ClientConnection/tests/: CMakeLists.txt  TestServer.cpp  env_settings.hpp  test_json_parser.cpp
client/LogicLib/: ClientData.h  DataStructures.h  Drawing.h  DrawingLogic.h  HttpClient.cpp  HttpClient.h  LogicController.cpp  LogicController.h  LogicLib.pro  ScreenController.cpp  ScreenController.h  User.h  UserLogic.h
client/LogicLib/inc/: ClientData.h  DataStructures.h  DrawingLogic.h  HttpClient.h  LogicController.h  ScreenController.h  UserLogic.h
client/LogicLib/src/: DrawingLogic.cpp  LogicController.cpp  ScreenController.cpp  UserLogic.cpp
client/MinderClient/: Arrow.cpp  Arrow.h  AuthorizationWindow.cpp  AuthorizationWindow.h  BlockImage.h  DataStructures.h  LogicController.cpp  LogicController.h  MindMap.cpp  MindMap.h  MinderClient.pro  NewBlockCreationWindow.cpp  NewBlockCreationWindow.h  RegisterWindow.cpp  RegisterWindow.h  RegisterWindow.ui  ScreenController.h  SessionConnectionWindow.cpp  SessionConnectionWindow.h  SessionCreationWindow.cpp  SessionCreationWindow.h  SessionUsersList.cpp  SessionUsersList.h  SessionWindow.cpp  SessionWindow.h  SettingsWindow.cpp  SettingsWindow.h  ToolsPalette.cpp  ToolsPalette.h  ToolsPalette.ui  arrow.cpp  arrow.h  authorizationwindow.cpp  authorizationwindow.h  authorizationwindow.ui  block.h  blockimage.cpp  blockimage.h  commentblock.cpp  commentblock.h  (+35 more)
client/MinderClient/libs/Arrow/: Arrow.h  Arrow.pri
client/MinderClient/libs/AuthorizationWindow/: AuthorizationWindow.cpp  AuthorizationWindow.h  AuthorizationWindow.pri  AuthorizationWindow.ui
client/MinderClient/libs/AuthorizationWindow/inc/: AuthorizationWindow.h
client/MinderClient/libs/AuthorizationWindow/src/: AuthorizationWindow.cpp
client/MinderClient/libs/AuthorizationWindow/ui/: AuthorizationWindow.ui
client/MinderClient/libs/BlockImage/: BlockImage.cpp  BlockImage.h  BlockImage.pri
client/MinderClient/libs/DataStructures/: DataStructures.h  DataStructures.pri  ViewDataStructures.h
client/MinderClient/libs/DataStructures/inc/: HttpDataStructures.h
client/MinderClient/libs/HttpClient/: HttpClient.pri
client/MinderClient/libs/HttpClient/inc/: HttpClient.hpp  JsonParser.hpp
client/MinderClient/libs/HttpClient/src/: HttpClient.cpp  JsonParser.cpp
client/MinderClient/libs/HttpThread/: HttpThread.pri
client/MinderClient/libs/LogicController/: LogicController.cpp  LogicController.h  LogicController.pri
client/MinderClient/libs/LogicLib/: LogicLib.pri
client/MinderClient/libs/MindMap/: Arrow.cpp  Arrow.h  BlockImage.h  MindMap.cpp  MindMap.h  MindMap.pri  NewBlockCreationWindow.cpp  NewBlockCreationWindow.ui
client/MinderClient/libs/NewBlockCreationWindow/: NewBlockCreationWindow.h  NewBlockCreationWindow.pri
client/MinderClient/libs/RegisterWindow/: RegisterWindow.cpp  RegisterWindow.h  RegisterWindow.pri  RegisterWindow.ui
client/MinderClient/libs/ScreenController/: ScreenController.cpp  ScreenController.h  ScreenController.pri
client/MinderClient/libs/SessionConnectionWindow/: SessionConnectionWindow.cpp  SessionConnectionWindow.h  SessionConnectionWindow.pri  SessionConnectionWindow.ui
client/MinderClient/libs/SessionCreationWindow/: SessionCreationWindow.cpp  SessionCreationWindow.h  SessionCreationWindow.pri
client/MinderClient/libs/SessionUsersList/: SessionUsersList.cpp  SessionUsersList.h  SessionUsersList.pri
client/MinderClient/libs/SessionWindow/: SessionWindow.cpp  SessionWindow.h  SessionWindow.pri  SessionWindow.ui
client/MinderClient/libs/SettingsWindow/: SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.pri  SettingsWindow.ui
client/MinderClient/libs/ToolsPalette/: ToolsPalette.h  ToolsPalette.pri
client/MinderClient/resources/: resources.qrc
client/MinderClient/resources/qss/: global.qss
client/MinderClient/src/: main.cpp
client/MinderClient/tests/: test_MindMap.cpp  test_ScreenController.cpp  test_SessionUsersList.cpp  tests.cpp  tests.pro
client/tests/: gtest_dependency.pri  tests.pro
client/tests/inc/: mockClient.h  testsDrawing.h  testsLogicController.h  testsUser.h
client/tests/src/: main.cpp
client/testsLogic/: main.cpp  mockClient.h  tests.pro  testsDrawing.h  testsLogicController.h  testsUser.h
server/: CMakeLists.txt  Makefile  main.cpp
server/Database/: CMakeLists.txt  DatabaseClient.h  Makefile  README.md
server/Database/DatabaseDrawDeskClient/: CMakeLists.txt  DatabaseDrawDeskClient.cpp  DatabaseDrawDeskClient.h
server/Database/DatabaseSessionClient/: CMakeLists.txt  DatabaseSessionClient.cpp  DatabaseSessionClient.h
server/Database/DatabaseUsersClient/: CMakeLists.txt  DatabaseUsersClient.cpp  DatabaseUsersClient.h
server/Database/MySQLDatabaseClient/: CMakeLists.txt  MySQLDatabaseClient.cpp  MySQLDatabaseClient.h
server/Database/PostgreDatabaseClient/: CMakeLists.txt  PostgreDatabaseClient.cpp  PostgreDatabaseClient.h
server/Database/tests/: CMakeLists.txt  env_settings.hpp  test_database_draw_desk_client.cpp  test_database_session_client.cpp  test_database_users_client.cpp
server/NetworkController/: NetworkController.cpp  NetworkController.hpp  NetworkSession.cpp
server/NetworkSession/: NetworkSession.cpp
server/Server/: CMakeLists.txt
server/Server/BuisnessLogic/: BuisnessLogic.cpp  BuisnessLogic.hpp  CMakeLists.txt
server/Server/NetworkController/: CMakeLists.txt  NetworkController.cpp  NetworkController.hpp
server/Server/NetworkSession/: CMakeLists.txt  NetworkSession.cpp  NetworkSession.hpp
server/Server/ServerLogic/: CMakeLists.txt  ServerLogic.cpp  ServerLogic.hpp
server/Server/tests/: CMakeLists.txt  TestServer.cpp
server/ServerLogic/: CMakeLists.txt  ServerLogic.cpp  ServerLogic.hpp
(+40 files in other folders)
