cmake_minimum_required(VERSION 3.0.0)
project(DatabaseClient)

file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
set(DATABASE_CLIENT_INC ${INCLUDE_DIRS} PARENT_SCOPE)
set(JSON_INC ../nlohmann)


add_subdirectory(PostgreDatabaseClient)
add_subdirectory(MySQLDatabaseClient)
add_subdirectory(DatabaseUsersClient)
add_subdirectory(DatabaseSessionClient)
add_subdirectory(DatabaseDrawDeskClient)


set(DATABASE_SESSION_CLIENT_LIB ${DATABASE_SESSION_CLIENT_LIB} PARENT_SCOPE)
set(DATABASE_SESSION_CLIENT_INC ${DATABASE_SESSION_CLIENT_INC} PARENT_SCOPE)

set(DATABASE_USERS_CLIENT_LIB ${DATABASE_USERS_CLIENT_LIB} PARENT_SCOPE)
set(DATABASE_USERS_CLIENT_INC ${DATABASE_USERS_CLIENT_INC} PARENT_SCOPE)

set(DATABASE_DRAW_DESK_CLIENT_LIB ${DATABASE_DRAW_DESK_CLIENT_LIB} PARENT_SCOPE)
set(DATABASE_DRAW_DESK_CLIENT_INC ${DATABASE_DRAW_DESK_CLIENT_INC} PARENT_SCOPE)

set(POSTGRE_DATABASE_CLIENT_LIB ${POSTGRE_DATABASE_CLIENT_LIB} PARENT_SCOPE)
set(POSTGRE_DATABASE_CLIENT_INC ${POSTGRE_DATABASE_CLIENT_INC} PARENT_SCOPE)

set(MYSQL_DATABASE_CLIENT_LIB ${MYSQL_DATABASE_CLIENT_LIB} PARENT_SCOPE)
set(MYSQL_DATABASE_CLIENT_INC ${MYSQL_DATABASE_CLIENT_INC} PARENT_SCOPE)